2004-01-19  Murray Cumming  <murrayc@usa.net>

	* gtk/src/liststore.[hg|ccg], gtk/src/treestore.[hg|ccg]: Added
	set_model_columns() methods, as wrappers for 
	gtk_list_store_set_model_columns() and 
	gtk_tree_store_set_model_columns().
	* examples/book/treeview/drag_and_drop/dnd_treemodel.[h|cc]: Used
	these methods with a non-static member ModelColumnRecord, so that
	the ModelColumnRecord can be instantiated after the gtkmm type system.
	Thanks to Bryan Forbes for pointing this out.

2004-01-19  Takashi Takekawa <takekawa@users.sourceforge.jp>
 
 	* atk/src/text.hg, gtk/src/enums.hg: deleted unnecessary namespace
	qualification, for the Intel compiler. Bug #131172.

2004-01-19  Murray Cumming  <murrayc@usa.net>

	* gdk/src/drawable.[hg|ccg]: Added copy_to_image() as wrapper for
	gdk_drawable_copy_to_image().
	* gtk/src/cellrenderertext.hg: Add a custom m4 conversion for the
	Gdk::Drawable paramter of the render() vfunc, so that it takes
	an extra reference.

2004-01-16  Murray Cumming  <murrayc@usa.net>

	* */*.hg: All _WRAP_VFUNCS are now in protected sections, because
	gmmproc no longer puts them in a separated protected section 
	automatically. Note also, that gmmproc now generates correct const
	_vfuncs, so some of your overrides might no longer be overrides. Also,
	you can add doxygen documentation before the _WRAP_VFUNC() macro now,
	and it will be read by doxygen.

2004-01-14  Murray Cumming  <murrayc@usa.net>

	* gtk/src/treeiter.[hg}ccg]: Added TreeIter::set_stamp() and 
	get_stamp(), with documentation, for use when implementing a 
	custom TreeModel.
	* gtk/src/treemodel.[hg|ccg]: 
	- Hand-coded several vfuncs and their C callbacks, so that we can have 
	C++ iterators instead of GtkTreeIter*s in the API, and to reorder some 
	parameters.
	- Added 2 extra vfuncs for information about root nodes. The C 
	versions of these vfuncs provide root node information when the iter 
	is NULL, but it is nicer in C++ to just have an extra vfunc without 