@@ -173,6 +173,8 @@ public:
   _WRAP_METHOD(TreeModelFlags get_flags() const, gtk_tree_model_get_flags)
   _WRAP_METHOD(int get_n_columns() const, gtk_tree_model_get_n_columns)
   _WRAP_METHOD(GType get_column_type(int index) const, gtk_tree_model_get_column_type)
+  //TODO: A C++-type version of get_column_type()?
+  
   _WRAP_METHOD(TreeModel::Path get_path(const iterator& iter) const, gtk_tree_model_get_path)
 
   _WRAP_METHOD(void row_changed(const Path& path, const iterator& iter), gtk_tree_model_row_changed)
