@@ -1,3 +1,12 @@
+2004-01-21  Murray Cumming  <murrayc@usa.net>
+
+	* examples/book/treemodelcustom/exampletreemodel.[h|cc]: Wrote and
+	used some GlueItem and GlueList classes to better manage the 
+	GtkTreeIter data. But at the moment, the old iters are never 
+	invalidatated so this concept is not fully tested.
+	* gtk/src/treemodelfilter: Wrapped set_modify_func() after talking
+	to Kris about what it does.
+
 2004-01-19  Murray Cumming  <murrayc@usa.net>
 
 	* gtk/src/liststore.[hg|ccg], gtk/src/treestore.[hg|ccg]: Added
